# TinyLog

./: CMakeLists.txt  Makefile  README.md  TLog.cpp  TLog.hpp  main.cpp
